Added homepage, nav, footer

--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,27 @@
 
 <body>
     <div class="navbar">
-        <div class="navbar_logo"></div>
-        <div class="navlinks">
-            <a href="most-popular-articles.html">Most Popular Articles</a>
-            <a href="least-popular-articles.html">Least Popular Articles</a>
-            <div class="subnav">
-                <button class="subnavbtn">Colour theme parties <i class="fa fa-caret-down"></i></button>
-                <div class="subnav-content">
-                    <a href="colour-themed-parties/black-colour-theme.html">Black colour theme</a>
-                    <a href="colour-themed-parties/red-colour-theme.html">Red colour theme</a>
-                    <a href="colour-themed-parties/blue-colour-theme.html">Blue colour theme</a>
-                    <a href="colour-themed-parties/green-colour-theme.html">Green colour theme</a>
-                    <a href="colour-themed-parties/yellow-colour-theme.html">Yellow colour theme</a>
+        <div></div>
+        <div class="navbar_main">
+            <div class="navbar__logo"></div>
+            <div class="navlinks">
+                <a href="most-popular-articles.html">Most Popular Articles</a>
+                <a href="least-popular-articles.html">Least Popular Articles</a>
+                <div class="subnav">
+                    <button class="subnavbtn">Colour theme parties <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <a href="colour-themed-parties/black-colour-theme.html">Black colour theme</a>
+                        <a href="colour-themed-parties/red-colour-theme.html">Red colour theme</a>
+                        <a href="colour-themed-parties/blue-colour-theme.html">Blue colour theme</a>
+                        <a href="colour-themed-parties/green-colour-theme.html">Green colour theme</a>
+                        <a href="colour-themed-parties/yellow-colour-theme.html">Yellow colour theme</a>
+                    </div>
                 </div>
+                <a href="most-liked-items.html">Most liked items</a>
             </div>
-            <a href="most-liked-items.html">Most liked items</a>
+        </div>
+        <div class="navbar__login">
+            <p>Login</p>
         </div>
     </div>
     <div class="hero">
@@ -164,7 +170,7 @@
                 <input type="submit">
             </form>
         </div>
-        <div class="footer_wrapper">
+        <div class="footer__wrapper">
             <div class="social-icons">
                 <a href="www.facebook.com" class="fa-brands fa-square-facebook"></i></a>
                 <a href="www.twitter.com" class="fa-brands fa-square-x-twitter"></i></a>
